--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,7 @@ services:
       - "8001:8001"
     command: >
       bash -c "./manage.py collectstatic --noinput && ./manage.py migrate && gunicorn -b 0.0.0.0:8001 --workers 4 --threads 2 core.wsgi:application"
+
+volumes:
+  static_volume:
+  media_volume:
