--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,23 @@
 asgiref==3.7.2
+bcrypt==4.0.1
+cffi==1.16.0
+cryptography==41.0.5
 Django==4.2.7
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 docopt==0.6.2
+paramiko==3.3.1
 prompt-toolkit==3.0.39
+psycopg2-binary==2.9.9
+pycparser==2.21
 pyflakes==3.1.0
 Pygments==2.16.1
 PyJWT==2.8.0
+PyNaCl==1.5.0
 python-dotenv==1.0.0
 pytz==2023.3.post1
 pyvmomi==8.0.2.0
 six==1.16.0
 sqlparse==0.4.4
 wcwidth==0.2.9
-paramiko~=3.3.1
