--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 docopt==0.6.2
+gunicorn==21.2.0
+packaging==23.2
 paramiko==3.3.1
 prompt-toolkit==3.0.39
 psycopg2-binary==2.9.9
